--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@alifd/next": "^1.15.12",
+    "@fullpage/react-fullpage": "^0.1.14",
+    "animate.css": "^3.7.2",
+    "axios": "^0.19.0",
+    "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-zmage": "^0.8.4",
+    "swiper": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
