--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fullpage/react-fullpage": "^0.1.14",
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
@@ -18,6 +19,7 @@
     "react-zmage": "^0.8.4",
     "swiper": "^4.5.0"
   },
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
