--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     ]
   },
   "devDependencies": {
-    "compression-webpack-plugin": "^3.0.0"
+    "compression-webpack-plugin": "^3.0.0",
+    "jsonp": "^0.2.1"
   }
 }
